--- a/app/src/main/res/layout/popup_emprunt.xml
+++ b/app/src/main/res/layout/popup_emprunt.xml
@@ -3,8 +3,9 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
-        android:layout_width="200dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:orientation="vertical">
         <TextView
             android:layout_width="wrap_content"
@@ -13,14 +14,15 @@
             android:textSize="20sp"
             android:text="Le film est emprunté par : "/>
         <EditText
-            android:layout_width="200dp"
+            android:layout_width="wrap_content"
             android:id="@+id/editTextEmprunt"
             android:layout_height="wrap_content"
             android:hint="Nom de l'emprunteur"
             />
         <Button
-            android:layout_width="200dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:text="Emprunt"
             android:id="@+id/buttonAjouterEmprunt"/>
 
