--- a/app/src/main/res/layout/popup_genre.xml
+++ b/app/src/main/res/layout/popup_genre.xml
@@ -3,25 +3,25 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
-        android:layout_width="200dp"
+        android:layout_width="wrap_content"
+        android:layout_margin="10dp"
         android:layout_height="wrap_content"
         android:orientation="vertical">
         <TextView
             android:layout_width="wrap_content"
-
             android:layout_height="wrap_content"
             android:textSize="20sp"
             android:text="Le genre du film est :"/>
         <EditText
-            android:layout_width="200dp"
+            android:layout_width="wrap_content"
             android:id="@+id/edit_text_genre_popup"
             android:layout_height="wrap_content"
-            android:gravity="center"
             android:hint="Genre"
             />
         <Button
-            android:layout_width="200dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:text="Changer"
             android:id="@+id/button_genre"/>
 
