--- a/app/src/main/res/layout/popup_titre.xml
+++ b/app/src/main/res/layout/popup_titre.xml
@@ -3,8 +3,9 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
-        android:layout_width="200dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:orientation="vertical">
         <TextView
             android:layout_width="wrap_content"
@@ -13,15 +14,15 @@
             android:textSize="20sp"
             android:text="Le titre du film est  : "/>
         <EditText
-            android:layout_width="200dp"
+            android:layout_width="wrap_content"
             android:id="@+id/edit_text_titre_popup"
             android:layout_height="wrap_content"
-            android:gravity="center"
             android:hint="Nom du film"
             />
         <Button
             android:layout_width="200dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:text="Changer"
             android:id="@+id/button_titre"/>
 
