--- a/app/src/main/res/layout/fragment_list_film.xml
+++ b/app/src/main/res/layout/fragment_list_film.xml
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/list"
-    android:name="res.layout.ItemFragment"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-
-    tools:context="com.example.ifigm.mavideotheque.view.Activity.MainActivity"
+    tools:context="com.example.ifigm.mavideotheque.view.fragment.FragmentFilm"
     >
-
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/list_item"/>
-    </LinearLayout>
+
+
+</LinearLayout>
