--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/app_bar_layout">
+    <android.support.v7.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tab_layout"
@@ -19,9 +22,13 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/pager">
-
         </android.support.v4.view.ViewPager>
+
+    </android.support.v7.widget.Toolbar>
+
+
     </android.support.design.widget.AppBarLayout>
+
 
 
 
