--- a/app/src/main/res/layout/activity_fragment_tout_film.xml
+++ b/app/src/main/res/layout/activity_fragment_tout_film.xml
@@ -11,9 +11,16 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.ifigm.mavideotheque.view.Fragment.FragmentToutFilm">
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"/>
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/liste_item">
     </ListView>
+
+
 </LinearLayout>
