--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -6,11 +6,11 @@
     <item
         android:id="@+id/menu_add"
         android:icon="@drawable/autorenew"
-        app:showAsAction="always"
-        android:title="Ajouter un film"/>
+        app:showAsAction="never"
+        android:title="Mettre à jour la liste"/>
     <item
-        android:id="@+id/menu_remove"
+        android:id="@+id/menu_help"
         android:icon="@android:drawable/ic_menu_delete"
-        app:showAsAction="always"
-        android:title="Supprimer un film"/>
+        app:showAsAction="never"
+        android:title="aide"/>
 </menu>
