--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:id="@+id/view"
         android:orientation="vertical">
         <android.support.design.widget.AppBarLayout
             android:id="@+id/app_bar_layout"
@@ -62,7 +63,7 @@
             android:layout_gravity="top|center_horizontal"
             app:srcCompat="@android:drawable/ic_delete"
             app:backgroundTint="?attr/colorButtonNormal" />
-    </LinearLayout>
 
+    </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
