--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main_content"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+  >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -39,10 +40,10 @@
 
     <LinearLayout
 
-
+        android:padding="16sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_anchor="@id/app_bar_layout"
+        app:layout_anchor="@id/pager"
         app:layout_anchorGravity="end|bottom"
         android:orientation="horizontal"
         android:gravity="end"
@@ -53,7 +54,8 @@
             android:layout_height="wrap_content"
             app:elevation="6dp"
             app:backgroundTint="?attr/colorButtonNormal"
-            app:srcCompat="@drawable/ic_add_black_24dp" />
+            app:srcCompat="@drawable/ic_add_black_24dp"
+            app:fabSize="normal" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/min"
@@ -62,7 +64,8 @@
             app:elevation="6dp"
             android:layout_gravity="top|center_horizontal"
             app:srcCompat="@android:drawable/ic_delete"
-            app:backgroundTint="?attr/colorButtonNormal" />
+            app:backgroundTint="?attr/colorButtonNormal"
+            app:fabSize="normal" />
 
     </LinearLayout>
 
