--- a/app/src/main/res/layout/film_layout.xml
+++ b/app/src/main/res/layout/film_layout.xml
@@ -3,40 +3,50 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="88dp"
+    android:paddingLeft="16sp"
+    android:paddingRight="16sp"
+    android:paddingStart="16sp"
     android:id="@+id/list"
-    android:weightSum="1">
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+      >
         <TextView
-            android:textSize="30sp"
+            android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textViewFilm"
-            android:layout_marginBottom="50dp"
-            android:layout_weight="1"/>
+            android:fontFamily="sans-serif"
+            android:textSize="16sp"
+            />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:weightSum="1">
+
+        >
 
         <TextView
-            android:textSize="25sp"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textViewFilmGenre"
-            android:layout_weight="0.5"/>
+            android:fontFamily="sans-serif"
+            android:textSize="14sp"
+            android:layout_weight="0.5"
+           />
         <TextView
-            android:textSize="25sp"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textViewFilmAuteur"
-            android:layout_weight="0.5"/>
+            android:fontFamily="sans-serif"
+            android:textSize="14sp"
+            android:layout_weight="0.5"
+           />
 
     </LinearLayout>
 
@@ -47,18 +57,22 @@
             android:weightSum="1">
 
             <TextView
-                android:textSize="25sp"
-                android:layout_width="match_parent"
+                android:fontFamily="sans-serif"
+                android:textSize="14sp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/textViewFilmEmprunt"
-                android:layout_weight="0.5"/>
+                android:layout_weight="0.5"
+               />
 
             <TextView
-                android:textSize="25sp"
-                android:layout_width="match_parent"
+                android:fontFamily="sans-serif"
+                android:textSize="14sp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/textViewFilmNomEmprunt"
-                android:layout_weight="0.5"/>
+                android:layout_weight="0.5"
+               />
 
         </LinearLayout>
 
