--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,7 +53,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:elevation="6dp"
-            app:backgroundTint="?attr/colorButtonNormal"
+            app:backgroundTint="@color/colorPrimary"
             app:srcCompat="@drawable/ic_add_black_24dp"
             app:fabSize="normal" />
 
@@ -61,11 +61,8 @@
             android:id="@+id/min"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:elevation="6dp"
-            android:layout_gravity="top|center_horizontal"
             app:srcCompat="@android:drawable/ic_delete"
-            app:backgroundTint="?attr/colorButtonNormal"
-            app:fabSize="normal" />
+            />
 
     </LinearLayout>
 
