--- a/app/src/main/res/layout/activity_fragment_tout_film.xml
+++ b/app/src/main/res/layout/activity_fragment_tout_film.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_fragment_tout_film"
     android:layout_width="match_parent"
@@ -15,20 +16,11 @@
         <ListView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:dividerHeight="2dp"
-            android:scrollbars="vertical"
-            android:divider="@color/colorPrimary"
             android:id="@+id/liste_item"
-            android:headerDividersEnabled="false"
-            android:footerDividersEnabled="false"
-            android:elevation="10dp"
             android:fastScrollAlwaysVisible="true"
             android:fastScrollEnabled="true"
+            android:layout_below="@+id/suppr"
             android:isScrollContainer="true">
-
-
-
-
         </ListView>
     </android.support.v4.widget.SwipeRefreshLayout>
 
