--- a/app/src/main/res/layout/activity_fragment_tout_film.xml
+++ b/app/src/main/res/layout/activity_fragment_tout_film.xml
@@ -5,6 +5,10 @@
     android:id="@+id/activity_fragment_tout_film"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     tools:context="com.example.ifigm.mavideotheque.view.Fragment.FragmentToutFilm">
 
