--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,13 +55,13 @@
             app:elevation="6dp"
             app:backgroundTint="@color/colorPrimary"
             app:srcCompat="@drawable/ic_add_black_24dp"
-            app:fabSize="normal" />
+            />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/min"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:srcCompat="@android:drawable/ic_delete"
+            app:srcCompat="@android:drawable/ic_menu_delete"
             />
 
     </LinearLayout>
