--- a/app/src/main/res/layout/popup_add.xml
+++ b/app/src/main/res/layout/popup_add.xml
@@ -98,6 +98,7 @@
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:elevation="0dp"
             android:text="Ajouter ce film"
             android:id="@+id/button_add_film"/>
 
